{
  "version": 4,
  "terraform_version": "0.13.0",
  "serial": 5601,
  "lineage": "058d9c8b-ddc1-1c4f-0b7a-90261d4f6e41",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "green_nat_eip",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "associate_with_private_ip": "10.0.40.0",
            "association_id": "eipassoc-0554640b1db22f7c8",
            "domain": "vpc",
            "id": "eipalloc-06fe82c9d30fdd6eb",
            "network_interface": "eni-0adfdba6f6c1d0daa",
            "private_dns": "ip-10-0-40-233.us-west-1.compute.internal",
            "private_ip": "10.0.40.233",
            "public_dns": "ec2-54-215-52-65.us-west-1.compute.amazonaws.com",
            "public_ip": "54.215.52.65",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "green_bastion",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-023e0c35fc414e78b",
            "arn": "arn:aws:ec2:us-west-1:680232662269:instance/i-0b4cf014625001a13",
            "associate_public_ip_address": true,
            "availability_zone": "us-west-1b",
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0b4cf014625001a13",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "cali-key1",
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-07478f3cc9bc7a200",
            "private_dns": "ip-10-0-40-30.us-west-1.compute.internal",
            "private_ip": "10.0.40.30",
            "public_dns": "ec2-13-56-228-134.us-west-1.compute.amazonaws.com",
            "public_ip": "13.56.228.134",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "volume_id": "vol-06dd0499c12455c5a",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "security_groups": [
              "sg-0f13fa883b1922e4b"
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-021e3ae830f79aac2",
            "tags": {
              "Name": "Green-Bastion"
            },
            "tenancy": "default",
            "vpc_security_group_ids": [
              "sg-0f13fa883b1922e4b"
            ]
          },
          "dependencies": [
            "aws_security_group.green_pub_sg",
            "aws_subnet.pub_az1_subnet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "green_igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:internet-gateway/igw-01d28fa1b2f52d4d9",
            "id": "igw-01d28fa1b2f52d4d9",
            "owner_id": "680232662269",
            "tags": {
              "Name": "GoGreenIGW"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "green_app_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:loadbalancer/app/green-app-alb/e463210aaba211e4",
            "arn_suffix": "app/green-app-alb/e463210aaba211e4",
            "dns_name": "internal-green-app-alb-499554975.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:loadbalancer/app/green-app-alb/e463210aaba211e4",
            "idle_timeout": 60,
            "internal": true,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "green-app-alb",
            "security_groups": [
              "sg-0cdeb60f1183de5fc"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-00bbabe852f545895"
              },
              {
                "subnet_id": "subnet-0aa7be39917254154"
              }
            ],
            "subnets": [
              "subnet-00bbabe852f545895",
              "subnet-0aa7be39917254154"
            ],
            "tags": {
              "Name": "green_app_alb"
            },
            "vpc_id": "vpc-051340b466e59254e",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.green_priv2_sg",
            "aws_subnet.priv1_az1_subnet",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "green_web_alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:loadbalancer/app/green-web-alb/12b87ffec0706103",
            "arn_suffix": "app/green-web-alb/12b87ffec0706103",
            "dns_name": "green-web-alb-286251748.us-west-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:loadbalancer/app/green-web-alb/12b87ffec0706103",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "green-web-alb",
            "security_groups": [
              "sg-0f13fa883b1922e4b"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-015bbadffafa28869"
              },
              {
                "subnet_id": "subnet-021e3ae830f79aac2"
              }
            ],
            "subnets": [
              "subnet-015bbadffafa28869",
              "subnet-021e3ae830f79aac2"
            ],
            "tags": {
              "Name": "green_web_alb"
            },
            "vpc_id": "vpc-051340b466e59254e",
            "zone_id": "Z368ELLRRE2KJ0"
          },
          "dependencies": [
            "aws_security_group.green_pub_sg",
            "aws_subnet.pub_az1_subnet",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "green_app_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener/app/green-app-alb/e463210aaba211e4/c50485a28351b042",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-app-tg/09cf9f335a0e376f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener/app/green-app-alb/e463210aaba211e4/c50485a28351b042",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:loadbalancer/app/green-app-alb/e463210aaba211e4",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.green_app_alb",
            "aws_lb_target_group.green_app_tg",
            "aws_security_group.green_priv2_sg",
            "aws_subnet.priv1_az1_subnet",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "green_web_listener",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener/app/green-web-alb/12b87ffec0706103/7c9db8cb4f046e79",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-web-tg/9dab231c20e8797f",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener/app/green-web-alb/12b87ffec0706103/7c9db8cb4f046e79",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:loadbalancer/app/green-web-alb/12b87ffec0706103",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "timeouts": null
          },
          "dependencies": [
            "aws_lb.green_web_alb",
            "aws_lb_target_group.green_web_tg",
            "aws_security_group.green_pub_sg",
            "aws_subnet.pub_az1_subnet",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "green_app_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-app-tg/09cf9f335a0e376f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener-rule/app/green-app-alb/e463210aaba211e4/c50485a28351b042/bef0ea4ec2acecab",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener-rule/app/green-app-alb/e463210aaba211e4/c50485a28351b042/bef0ea4ec2acecab",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener/app/green-app-alb/e463210aaba211e4/c50485a28351b042",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.green_app_alb",
            "aws_lb_listener.green_app_listener",
            "aws_lb_target_group.green_app_tg",
            "aws_security_group.green_priv2_sg",
            "aws_subnet.priv1_az1_subnet",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "green_web_listener_rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-web-tg/9dab231c20e8797f",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener-rule/app/green-web-alb/12b87ffec0706103/7c9db8cb4f046e79/f8a746e6cff32df9",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "/static/*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener-rule/app/green-web-alb/12b87ffec0706103/7c9db8cb4f046e79/f8a746e6cff32df9",
            "listener_arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:listener/app/green-web-alb/12b87ffec0706103/7c9db8cb4f046e79",
            "priority": 100
          },
          "dependencies": [
            "aws_lb.green_web_alb",
            "aws_lb_listener.green_web_listener",
            "aws_lb_target_group.green_web_tg",
            "aws_security_group.green_pub_sg",
            "aws_subnet.pub_az1_subnet",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green_app_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-app-tg/09cf9f335a0e376f",
            "arn_suffix": "targetgroup/green-app-tg/09cf9f335a0e376f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200",
                "path": "/",
                "port": "80",
                "protocol": "HTTP",
                "timeout": 7,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-app-tg/09cf9f335a0e376f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-app-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "green_app_tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "green_web_tg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-web-tg/9dab231c20e8797f",
            "arn_suffix": "targetgroup/green-web-tg/9dab231c20e8797f",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 10,
                "matcher": "200-320",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-1:680232662269:targetgroup/green-web-tg/9dab231c20e8797f",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "green-web-tg",
            "port": 80,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "green_web_tg"
            },
            "target_type": "instance",
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_main_route_table_association",
      "name": "green_default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01493436fa0f2aa9e",
            "original_route_table_id": "rtb-0571dfb1c25b03ef2",
            "route_table_id": "rtb-055532cea8bebf51d",
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_route_table.green_pub_rt",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "green_nat_gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-06fe82c9d30fdd6eb",
            "id": "nat-0afa42ffe37c0b2da",
            "network_interface_id": "eni-0adfdba6f6c1d0daa",
            "private_ip": "10.0.40.233",
            "public_ip": "54.215.52.65",
            "subnet_id": "subnet-021e3ae830f79aac2",
            "tags": {
              "Name": "Green-Nat-GW"
            }
          },
          "dependencies": [
            "aws_eip.green_nat_eip",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "priv1_az1_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:network-acl/acl-0233366fece71c015",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0233366fece71c015",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 160,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "680232662269",
            "subnet_ids": [
              "subnet-0aa7be39917254154"
            ],
            "tags": {
              "Name": "Priv1-AZ1-NACL"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "priv1_az2_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:network-acl/acl-0857a78437af4768c",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0857a78437af4768c",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 160,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 150,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "10.0.0.0/16",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "680232662269",
            "subnet_ids": [
              "subnet-00bbabe852f545895"
            ],
            "tags": {
              "Name": "Priv1-AZ2-NACL"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "priv2_az1_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:network-acl/acl-0d56227a2952d88c7",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d56227a2952d88c7",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.20.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.50.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "680232662269",
            "subnet_ids": [
              "subnet-0f1b5b2706cd3f4ab"
            ],
            "tags": {
              "Name": "DB-AZ1-NACL"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_subnet.priv2_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "priv2_az2_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:network-acl/acl-0d6cd0875d25084c8",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0d6cd0875d25084c8",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "10.0.20.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "10.0.50.0/24",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 3306
              }
            ],
            "owner_id": "680232662269",
            "subnet_ids": [
              "subnet-01525f91a3a55c4d8"
            ],
            "tags": {
              "Name": "DB-AZ2-NACL"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_subnet.priv2_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "pub_az1_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:network-acl/acl-018817de887ec86ab",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-018817de887ec86ab",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 150,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "680232662269",
            "subnet_ids": [
              "subnet-021e3ae830f79aac2"
            ],
            "tags": {
              "Name": "Public-AZ1-NACL"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl",
      "name": "pub_az2_nacl",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:network-acl/acl-0f0a29b8c59670d4f",
            "egress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "-1",
                "rule_no": 100,
                "to_port": 0
              }
            ],
            "id": "acl-0f0a29b8c59670d4f",
            "ingress": [
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 0,
                "icmp_code": -1,
                "icmp_type": -1,
                "ipv6_cidr_block": "",
                "protocol": "1",
                "rule_no": 150,
                "to_port": 0
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 1024,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 140,
                "to_port": 65535
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 22,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 120,
                "to_port": 22
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 3306,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 130,
                "to_port": 3306
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 443,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 110,
                "to_port": 443
              },
              {
                "action": "allow",
                "cidr_block": "0.0.0.0/0",
                "from_port": 80,
                "icmp_code": 0,
                "icmp_type": 0,
                "ipv6_cidr_block": "",
                "protocol": "6",
                "rule_no": 100,
                "to_port": 80
              }
            ],
            "owner_id": "680232662269",
            "subnet_ids": [
              "subnet-015bbadffafa28869"
            ],
            "tags": {
              "Name": "Public-AZ2-NACL"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-482207731",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2095141560",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3691285861",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_inbound_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": "-1",
            "icmp_type": "-1",
            "id": "nacl-3358369286",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "icmp",
            "rule_action": "allow",
            "rule_number": 160,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_inbound_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-26367200",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 150,
            "to_port": 65535
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2708966205",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 22
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az1_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3104754122",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0233366fece71c015",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.priv1_az1_nacl",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1404530855",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-871089644",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 443
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2467174961",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_inbound_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": "-1",
            "icmp_type": "-1",
            "id": "nacl-2758097276",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "icmp",
            "rule_action": "allow",
            "rule_number": 160,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_inbound_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1318634420",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 150,
            "to_port": 65535
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.0.0/16",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4001176681",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 22
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv1_az2_outbound_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3158937320",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0857a78437af4768c",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.priv1_az2_nacl",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv2_az1_inbound_mysql1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.50.0/24",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1147682441",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d56227a2952d88c7",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.priv2_az1_nacl",
            "aws_subnet.priv2_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv2_az1_inbound_mysql2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.20.0/24",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2583619340",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d56227a2952d88c7",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.priv2_az1_nacl",
            "aws_subnet.priv2_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv2_az1_outbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2442651706",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d56227a2952d88c7",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.priv2_az1_nacl",
            "aws_subnet.priv2_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv2_az2_inbound_mysql1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.50.0/24",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3298745705",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d6cd0875d25084c8",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.priv2_az2_nacl",
            "aws_subnet.priv2_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv2_az2_inbound_mysql2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "10.0.20.0/24",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-419955948",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d6cd0875d25084c8",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.priv2_az2_nacl",
            "aws_subnet.priv2_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "priv2_az2_outbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-474210487",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0d6cd0875d25084c8",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.priv2_az2_nacl",
            "aws_subnet.priv2_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-3331158952",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-454797869",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2068258662",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_inbound_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": "-1",
            "icmp_type": "-1",
            "id": "nacl-1210989365",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "icmp",
            "rule_action": "allow",
            "rule_number": 150,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_inbound_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-104077630",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2798765795",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az1_outbound_everwhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2431950522",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-018817de887ec86ab",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.pub_az1_nacl",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_inbound_http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 80,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-4140766849",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 80
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_inbound_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 443,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-727305988",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 110,
            "to_port": 443
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_inbound_mysql",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 3306,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1258650191",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 130,
            "to_port": 3306
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_inbound_ping",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 0,
            "icmp_code": "-1",
            "icmp_type": "-1",
            "id": "nacl-179102012",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "icmp",
            "rule_action": "allow",
            "rule_number": 150,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_inbound_range",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 1024,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-913734679",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 140,
            "to_port": 65535
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_inbound_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": false,
            "from_port": 22,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-2526258122",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "tcp",
            "rule_action": "allow",
            "rule_number": 120,
            "to_port": 22
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_network_acl_rule",
      "name": "pub_az2_outbound_everwhere",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "cidr_block": "0.0.0.0/0",
            "egress": true,
            "from_port": 0,
            "icmp_code": null,
            "icmp_type": null,
            "id": "nacl-1751329838",
            "ipv6_cidr_block": "",
            "network_acl_id": "acl-0f0a29b8c59670d4f",
            "protocol": "all",
            "rule_action": "allow",
            "rule_number": 100,
            "to_port": 0
          },
          "dependencies": [
            "aws_network_acl.pub_az2_nacl",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "green_private_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-08af25ce63ebc99281080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0afa42ffe37c0b2da",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-08af25ce63ebc9928",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_eip.green_nat_eip",
            "aws_nat_gateway.green_nat_gw",
            "aws_route_table.green_private_rt",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route",
      "name": "green_pub_route",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01d28fa1b2f52d4d9",
            "id": "r-rtb-055532cea8bebf51d1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-055532cea8bebf51d",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_peering_connection_id": ""
          },
          "dependencies": [
            "aws_internet_gateway.green_igw",
            "aws_route_table.green_pub_rt",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "green_private_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-08af25ce63ebc9928",
            "owner_id": "680232662269",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0afa42ffe37c0b2da",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GreenPrivate-Route-Table"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "green_pub_rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-055532cea8bebf51d",
            "owner_id": "680232662269",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01d28fa1b2f52d4d9",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "GreenPublic-Route-Table"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1_az1_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07dd05e430b53598e",
            "route_table_id": "rtb-08af25ce63ebc9928",
            "subnet_id": "subnet-0aa7be39917254154"
          },
          "dependencies": [
            "aws_route_table.green_private_rt",
            "aws_subnet.priv1_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv1_az2_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-054aab8aa36ee5e40",
            "route_table_id": "rtb-08af25ce63ebc9928",
            "subnet_id": "subnet-00bbabe852f545895"
          },
          "dependencies": [
            "aws_route_table.green_private_rt",
            "aws_subnet.priv1_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv2_az1_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-06900ec3559e331b1",
            "route_table_id": "rtb-08af25ce63ebc9928",
            "subnet_id": "subnet-0f1b5b2706cd3f4ab"
          },
          "dependencies": [
            "aws_route_table.green_private_rt",
            "aws_subnet.priv2_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "priv2_az2_sub_assoc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03d8e92f7720eee55",
            "route_table_id": "rtb-08af25ce63ebc9928",
            "subnet_id": "subnet-01525f91a3a55c4d8"
          },
          "dependencies": [
            "aws_route_table.green_private_rt",
            "aws_subnet.priv2_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subassocaz1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0d06e6b6730eea3cf",
            "route_table_id": "rtb-055532cea8bebf51d",
            "subnet_id": "subnet-021e3ae830f79aac2"
          },
          "dependencies": [
            "aws_route_table.green_pub_rt",
            "aws_subnet.pub_az1_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pub_subassocaz2s",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0315c5e5efc110985",
            "route_table_id": "rtb-055532cea8bebf51d",
            "subnet_id": "subnet-015bbadffafa28869"
          },
          "dependencies": [
            "aws_route_table.green_pub_rt",
            "aws_subnet.pub_az2_subnet",
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "green_priv1_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:security-group/sg-0ba15f8efce295513",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0ba15f8efce295513",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "GoGreen-Priv1-SG",
            "name_prefix": "",
            "owner_id": "680232662269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GoGreen-Priv2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "green_priv2_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:security-group/sg-0cdeb60f1183de5fc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0cdeb60f1183de5fc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "icmp",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 1024,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "10.0.0.0/16"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "GoGreen-Priv2-SG",
            "name_prefix": "",
            "owner_id": "680232662269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GoGreen-Priv2-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "green_pub_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:security-group/sg-0f13fa883b1922e4b",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0f13fa883b1922e4b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "name": "GoGreen-Pub-SG",
            "name_prefix": "",
            "owner_id": "680232662269",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "GoGreen-Pub-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1_az1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:subnet/subnet-0aa7be39917254154",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.50.0/24",
            "id": "subnet-0aa7be39917254154",
            "map_public_ip_on_launch": false,
            "owner_id": "680232662269",
            "tags": {
              "Name": "GreenPriv1-AZ1-Subnet"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv1_az2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:subnet/subnet-00bbabe852f545895",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.20.0/24",
            "id": "subnet-00bbabe852f545895",
            "map_public_ip_on_launch": false,
            "owner_id": "680232662269",
            "tags": {
              "Name": "GreenPriv1-AZ2-Subnet"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2_az1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:subnet/subnet-0f1b5b2706cd3f4ab",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.60.0/24",
            "id": "subnet-0f1b5b2706cd3f4ab",
            "map_public_ip_on_launch": false,
            "owner_id": "680232662269",
            "tags": {
              "Name": "GreenPriv2-AZ1-Subnet"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "priv2_az2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:subnet/subnet-01525f91a3a55c4d8",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.30.0/24",
            "id": "subnet-01525f91a3a55c4d8",
            "map_public_ip_on_launch": false,
            "owner_id": "680232662269",
            "tags": {
              "Name": "GreenPriv2-AZ2-Subnet"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_az1_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:subnet/subnet-021e3ae830f79aac2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1b",
            "availability_zone_id": "usw1-az1",
            "cidr_block": "10.0.40.0/24",
            "id": "subnet-021e3ae830f79aac2",
            "map_public_ip_on_launch": false,
            "owner_id": "680232662269",
            "tags": {
              "Name": "GreenPub-AZ1-Subnet"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "pub_az2_subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:subnet/subnet-015bbadffafa28869",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-1a",
            "availability_zone_id": "usw1-az3",
            "cidr_block": "10.0.10.0/24",
            "id": "subnet-015bbadffafa28869",
            "map_public_ip_on_launch": false,
            "owner_id": "680232662269",
            "tags": {
              "Name": "GreenPub-AZ2-Subnet"
            },
            "vpc_id": "vpc-051340b466e59254e"
          },
          "dependencies": [
            "aws_vpc.green_vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "green_vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-1:680232662269:vpc/vpc-051340b466e59254e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0cb4166de042802a9",
            "default_route_table_id": "rtb-055532cea8bebf51d",
            "default_security_group_id": "sg-0231afe6476ebc0fe",
            "dhcp_options_id": "dopt-c1698ea7",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-051340b466e59254e",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-055532cea8bebf51d",
            "owner_id": "680232662269",
            "tags": {
              "Name": "GoGreenVPC"
            }
          }
        }
      ]
    }
  ]
}